--- a/app/index.html
+++ b/app/index.html
@@ -6,25 +6,24 @@
   <meta name="description" content="A description.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
-  <title>application</title>
+  <title>klimafraktionen</title>
 
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   
 <div id="chart"></div>
+
+<!-- only for testing -->
 <div class="chart-ui clearfix">
   <div>
-    X-Achse
-    <select></select>
+    X-Achse<select></select>
   </div>
   <div>
-    Y-Achse
-    <select></select>
+    Y-Achse<select></select>
   </div>
   <div>
-    Radius
-    <select></select>
+    Radius<select></select>
   </div>
 </div>
 
