--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
  
   <title>Klimafraktionen</title>
   
-  <link rel="stylesheet" type="text/css" href="../node_modules/nvd3/build/nv.d3.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.css">
 </head>
 <body>
   
@@ -29,8 +29,8 @@
   </div>
 </div>
 
-<script src="../node_modules/d3/d3.min.js"></script>
-<script src="../node_modules/nvd3/build/nv.d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.js"></script>
 <script src="../index.js"></script>
 
 <script>
