--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,8 @@
 
   <div id="chart"></div>
   <div id="chart2"></div>
+  <div id="chart3"></div>
+  <div id="chart4"></div>
   
   <script>
   var Chart = new ClimateChart('#chart', { path: 'data/climate-data.csv' });
@@ -23,12 +25,37 @@
   });
   
   document.querySelector('.reset-btn').addEventListener('click', Chart.reset);
-  // window.setTimeout(function() {
-  //   Chart.update({ yAccessor : 'population_2014' })
-  // }, 2000);
 
-  var ChartX = new ClimateChart('#chart2', { path: 'data/climate-data.csv' });
+  var Chart2 = new ClimateChart('#chart2', { path: 'data/climate-data.csv', transitionDuration: 2000 });
 
+  var i = 0;
+  var groups = ['A', 'B', 'C', 'D'];
+  window.setInterval(function() {
+    Chart2.focusGroup(groups[i]);
+    i++;
+    if(i >= groups.length) {
+      i = 0;
+      Chart2.reset();
+    }
+  }, 2000);
+
+
+  var Chart3 = new ClimateChart('#chart3', { 
+    path: 'data/climate-data.csv',
+    aspectRatio: 1,
+    maxWidth: 600,
+    minRadius: 2,
+    maxRadius: 10,
+    isLogScale: true
+  });
+
+  var Chart4 = new ClimateChart('#chart4', { 
+    path: 'data/climate-data.csv',
+    aspectRatio: .9,
+    maxWidth: 1200,
+    minRadius: 1,
+    maxRadius: 50
+  });
   </script>
 </body>
 </html>
