--- a/example/index.html
+++ b/example/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
 
-  <button data-action-focus="A">Bestimmer</button>
-  <button data-action-focus="B">Blockierer</button>
-  <button data-action-focus="C">Aufsteiger</button>
-  <button data-action-focus="D">Schwache</button>
+  <div class="climate-factions">
+    <div class="climate-factions__button-group">
+      <button class="climate-factions__button climate-factions__button--a" data-action-focus="A">Trasformer</button>
+      <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">Blockierer</button>
+      <button class="climate-factions__button climate-factions__button--c" data-action-focus="C">Aufsteiger</button>
+      <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">Schwache</button>
+      <button class="climate-factions__button" data-action-reset=>alle anzeigen</button>
+    </div>
 
-  <button data-action-reset=>Zurücksetzen</button>
-
-  <div id="chart"></div>
+    <div id="chart"></div>
+  </div>
 
   <script>
 
@@ -40,7 +43,12 @@
       button.addEventListener('click', function() {
         var focusTarget = button.getAttribute('data-action-focus');
         chart.focusGroup(focusTarget);
-      });
+        if (button.classList)
+          Array.prototype.forEach.call(focusButtons, function(button){
+            button.classList.remove('climate-factions__button--active');
+          });
+          button.classList.add('climate-factions__button--active');
+        });
     });
 
   </script>
