Add threshold line.

--- a/example/index.html
+++ b/example/index.html
@@ -30,6 +30,7 @@
       xAxisDivisor: 1000000000,
       xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
       yAxisDescription: 'CO2-Ausstoß (Tonnen pro Kopf)',
+      threshold: 2.48,
       locale: 'de',
       tooltipData: {
         'co2_t_pc_2012': 'CO2-Ausstoß (in t/Kopf)',
