Update English translation.

--- a/example/en.html
+++ b/example/en.html
@@ -16,8 +16,8 @@
       <button class="climate-factions__button climate-factions__button--a" data-action-focus="A">the influential</button>
       <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">the blockaders</button>
       <button class="climate-factions__button climate-factions__button--c" data-action-focus="C">the successful</button>
-      <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">the week</button>
-      <button class="climate-factions__button" data-action-reset=>alle anzeigen</button>
+      <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">the weak</button>
+      <button class="climate-factions__button" data-action-reset=>show everything</button>
     </div>
 
     <div id="chart"></div>
