--- a/example/en.html
+++ b/example/en.html
@@ -48,18 +48,26 @@
 
     resetButton.addEventListener('click', function() {
       chart.reset();
+      Array.prototype.forEach.call(focusButtons, function(button){
+        if (button.classList) {
+          button.classList.remove('climate-factions__button--inactive');
+          button.classList.remove('climate-factions__button--active');
+        }
+      });
     });
 
     Array.prototype.forEach.call(focusButtons, function(button){
       button.addEventListener('click', function() {
         var focusTarget = button.getAttribute('data-action-focus');
         chart.focusGroup(focusTarget);
-        if (button.classList)
+        if (button.classList) {
           Array.prototype.forEach.call(focusButtons, function(button){
-            button.classList.remove('climate-factions__button--active');
+            button.classList.add('climate-factions__button--inactive');
           });
+          button.classList.remove('climate-factions__button--inactive');
           button.classList.add('climate-factions__button--active');
-        });
+        }
+      });
     });
 
   </script>
