--- a/example/en.html
+++ b/example/en.html
@@ -32,7 +32,7 @@
       xAxisDescription: 'GDP (bn US Dollars)',
       yAxisDescription: 'CO2 emissions (t/capita)',
       threshold: 2.48,
-      thresholdDescription: '2.48 t/capita',
+      thresholdDescription: 'Goal: 2.48 t/capita',
       locale: 'en',
       tooltipData: {
         'co2_t_pc_2012': 'CO2 emissions (t/capita)',
