--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
       <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">Die Blockierer</button>
       <button class="climate-factions__button climate-factions__button--c" data-action-focus="C">Die Aufsteiger</button>
       <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">Die Schwachen</button>
+      |
       <button class="climate-factions__button" data-action-reset=>alle anzeigen</button>
     </div>
 
@@ -31,11 +32,11 @@
       xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
       yAxisDescription: 'CO2-Ausstoß (Tonnen pro Kopf)',
       threshold: 2.48,
-      thresholdDescription: '2,48 t/Kopf',
+      thresholdDescription: 'Ziel: 2,48 t/Kopf',
       locale: 'de',
       tooltipData: {
-        'co2_t_pc_2012': 'CO2-Ausstoß (in t/Kopf)',
-        'gdp_2014': 'BIP 2014 (in US-Dollar)',
+        'co2_t_pc_2012': 'CO2-Ausstoß (t/Kopf)',
+        'gdp_2014': 'BIP 2014 (US-Dollar)',
         'population_2014': 'Bevölkerung 2014',
         'population_2050': 'Bevölkerung 2050',
         'climate_change_performance_index': 'Platz im Klimaschutz-Index'
