Update label/tooltip content.

--- a/example/en.html
+++ b/example/en.html
@@ -30,7 +30,7 @@
       locale: 'de',
       xAxisDivisor: 1000000000,
       xAxisDescription: 'GDP (bn US Dollars)',
-      yAxisDescription: 'CO2 emissions (t/capita)',
+      yAxisDescription: 'annual CO2 emissions (t/capita)',
       threshold: 2.48,
       thresholdDescription: 'Goal: 2.48 t/capita',
       locale: 'en',
@@ -38,7 +38,8 @@
         'co2_t_pc_2012': 'CO2 emissions (t/capita)',
         'gdp_2014': 'GDP 2014 (US Dollars)',
         'population_2014': 'population 2014',
-        'population_2050': 'population 2050',
+        'population_2050': 'population 2050 (projection)',
+        'important_industry_en': 'most important industy',
         'climate_change_performance_index': 'climate change performance index'
       }
     });
