--- a/example/index.html
+++ b/example/index.html
@@ -30,7 +30,7 @@
       locale: 'de',
       xAxisDivisor: 1000000000,
       xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
-      yAxisDescription: 'CO2-Ausstoß (Tonnen pro Kopf)',
+      yAxisDescription: 'jährlicher CO2-Ausstoß (Tonnen pro Kopf)',
       threshold: 2.48,
       thresholdDescription: 'Ziel: 2,48 t/Kopf',
       locale: 'de',
@@ -38,7 +38,8 @@
         'co2_t_pc_2012': 'CO2-Ausstoß (t/Kopf)',
         'gdp_2014': 'BIP 2014 (US-Dollar)',
         'population_2014': 'Bevölkerung 2014',
-        'population_2050': 'Bevölkerung 2050',
+        'population_2050': 'Bevölkerung 2050 (Schätzung)',
+        'important_industry_de': 'Wichtigster Wirtschaftszweig',
         'climate_change_performance_index': 'Platz im Klimaschutz-Index'
       }
     });
