Add legend for bubble sizes.

--- a/example/en.html
+++ b/example/en.html
@@ -31,6 +31,8 @@
       xAxisDivisor: 1000000000,
       xAxisDescription: 'GDP (bn US Dollars)',
       yAxisDescription: 'annual CO2 emissions (t/capita)',
+      legendMaxDescription: '1 bn people',
+      legendMinDescription: '10 mn',
       threshold: 2.48,
       thresholdDescription: 'Goal: 2.48 t/capita',
       locale: 'en',
