--- a/example/index.html
+++ b/example/index.html
@@ -33,12 +33,13 @@
     var chart = new ClimateChart('#chart', {
       height: window.innerHeight - 150,
       minWidth: window.innerWidth,
-      maxWidth: false,
       path: 'data/climate-data.csv',
       locale: 'de',
       xAxisDivisor: 1000000000,
       xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
       yAxisDescription: 'jährlicher CO2-Ausstoß (Tonnen pro Kopf)',
+      legendMaxDescription: '1 Mrd. Menschen',
+      legendMinDescription: '10 Mio.',
       threshold: 2.48,
       thresholdDescription: 'Ziel: 2,48 t/Kopf',
       locale: 'de',
