--- a/example/index.html
+++ b/example/index.html
@@ -18,14 +18,15 @@
       <button class="climate-factions__button climate-factions__button--c" data-action-focus="C">Die Aufsteiger</button>
       <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">Die Schwachen</button>
       |
-      <button class="climate-factions__button" data-action-reset=>alle anzeigen</button>
-
-      <button class="climate-factions__button" data-action-linear-scale=>lineare Skala</button>
-
-      <button class="climate-factions__button" data-action-log-scale=>log. Skala</button>
+      <button class="climate-factions__button" data-action-reset>alle anzeigen</button>
     </div>
 
     <div id="chart"></div>
+    <p class="climate-factions__extra-axis-description">
+      Bruttoinlandsprodukt (Mrd. US-Dollar)
+      <button class="climate-factions__button--small" data-action-linear-scale>auf linearer Skala anzeigen</button>
+      <button class="climate-factions__button--small" data-action-log-scale style="display: none">auf logarithmischer Skala anzeigen</button>
+    </p>
   </div>
 
   <script>
@@ -33,6 +34,12 @@
     var chart = new ClimateChart('#chart', {
       height: window.innerHeight - 150,
       minWidth: window.innerWidth,
+      margin: {
+        top: 25,
+        right: 25,
+        bottom: 25,
+        left: 40
+      },
       path: 'data/climate-data.csv',
       locale: 'de',
       xAxisDivisor: 1000000000,
@@ -70,11 +77,15 @@
 
     logScaleButton.addEventListener('click', function() {
       reset();
+      linearScaleButton.style.display = 'inline';
+      logScaleButton.style.display = 'none';
       chart.update({isLogScale: true});
     });
 
     linearScaleButton.addEventListener('click', function() {
       reset();
+      linearScaleButton.style.display = 'none';
+      logScaleButton.style.display = 'inline';
       chart.update({isLogScale: false});
     });
 
