Move data.csv to separate folder.

--- a/example/en.html
+++ b/example/en.html
@@ -41,7 +41,7 @@
         bottom: 25,
         left: 40
       },
-      path: 'data/climate-data.csv',
+      path: '../data/climate-data.csv',
       locale: 'en',
       xAxisDivisor: 1000000000,
       xAxisDescription: 'GDP (bn US Dollars)',
