--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
         bottom: 25,
         left: 40
       },
-      path: 'data/climate-data.csv',
+      path: '../data/climate-data.csv',
       locale: 'de',
       xAxisDivisor: 1000000000,
       xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
