Examples: Fix a minor regression.

--- a/example/en.html
+++ b/example/en.html
@@ -33,7 +33,7 @@
   <script>
 
     var chart = new ClimateChart('#chart', {
-      height: window.innerHeight - 150,
+      height: window.innerHeight - 200,
       minWidth: window.innerWidth,
       margin: {
         top: 110,
@@ -63,8 +63,10 @@
 
     var focusButtons = document.querySelectorAll('[data-action-focus]');
     var resetButton = document.querySelector('[data-action-reset]');
+    var linearScaleButton = document.querySelector('[data-action-linear-scale]');
+    var logScaleButton = document.querySelector('[data-action-log-scale]');
 
-    resetButton.addEventListener('click', function() {
+    function reset() {
       chart.reset();
       Array.prototype.forEach.call(focusButtons, function(button){
         if (button.classList) {
@@ -72,6 +74,20 @@
           button.classList.remove('climate-factions__button--active');
         }
       });
+    }
+
+    logScaleButton.addEventListener('click', function() {
+      reset();
+      linearScaleButton.style.display = 'inline';
+      logScaleButton.style.display = 'none';
+      chart.update({isLogScale: true});
+    });
+
+    linearScaleButton.addEventListener('click', function() {
+      reset();
+      linearScaleButton.style.display = 'none';
+      logScaleButton.style.display = 'inline';
+      chart.update({isLogScale: false});
     });
 
     Array.prototype.forEach.call(focusButtons, function(button){
@@ -79,15 +95,20 @@
         var focusTarget = button.getAttribute('data-action-focus');
         chart.focusGroup(focusTarget);
         if (button.classList) {
-          Array.prototype.forEach.call(focusButtons, function(button){
-            button.classList.add('climate-factions__button--inactive');
-          });
-          button.classList.remove('climate-factions__button--inactive');
-          button.classList.add('climate-factions__button--active');
+
+          if (button.classList.contains('climate-factions__button--active')) {
+            reset();
+          }
+          else {
+            Array.prototype.forEach.call(focusButtons, function(button){
+              button.classList.add('climate-factions__button--inactive');
+            });
+            button.classList.remove('climate-factions__button--inactive');
+            button.classList.add('climate-factions__button--active');
+          }
         }
       });
     });
-
   </script>
 </body>
 </html>
