Localize country name.

--- a/example/en.html
+++ b/example/en.html
@@ -51,6 +51,7 @@
       threshold: 2.48,
       thresholdDescription: 'Goal: 2.48 t/capita',
       locale: 'en',
+      labelField: 'countryname_en',
       tooltipData: {
         'co2_t_pc_2012': {
           title: 'CO2 emissions (t/capita)',
