--- a/example/index.html
+++ b/example/index.html
@@ -52,6 +52,7 @@
       threshold: 2.48,
       thresholdDescription: 'Ziel: 2,48 t/Kopf',
       locale: 'de',
+      labelField: 'countryname_en',
       tooltipData: {
         'co2_t_pc_2012': {
           title: 'CO2-Ausstoß (t/Kopf)',
