--- a/parisprotokoll/index.html
+++ b/parisprotokoll/index.html
@@ -58,7 +58,7 @@
       threshold: 2.48,
       thresholdDescription: 'Ziel: 2,48 t/Kopf',
       locale: 'de',
-      tooltipHeadline: 'countryname_en',
+      labelField: 'countryname_de',
       tooltipData: {
         'co2_t_pc_2012': {
           title: 'CO2-Ausstoß (t/Kopf)',
