Move config for datavis to constructor.

--- a/parisprotokoll/index.html
+++ b/parisprotokoll/index.html
@@ -12,7 +12,9 @@
 <body>
 
   <div class="climate-factions">
+
     <img src="logo_parisprotokoll.png" class="climate-factions__logo"/>
+
     <div class="climate-factions__button-group">
       <button class="climate-factions__button climate-factions__button--a" data-action-focus="A">Die Einflussreichen</button>
       <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">Die Blockierer</button>
@@ -38,6 +40,53 @@
 
   <script src="../chart.js"></script>
   <script src="./parisprotokoll.js"></script>
+
+  <script>
+    new ParisprotokollChart('#chart', {
+      height: window.innerHeight - 200,
+      minWidth: window.innerWidth,
+      margin: {
+        top: 110,
+        right: 25,
+        bottom: 25,
+        left: 40
+      },
+      path: '../data/climate-data.csv',
+      locale: 'de',
+      xAxisDivisor: 1000000000,
+      xAxisDescription: 'Bruttoinlandsprodukt (in Mrd. US-Dollar)',
+      yAxisDescription: 'jährlicher CO2-Ausstoß (Tonnen pro Kopf)',
+      legendMaxDescription: '1 Mrd. Menschen',
+      legendMinDescription: '100 Mio.',
+      threshold: 2.48,
+      thresholdDescription: 'Ziel: 2,48 t/Kopf',
+      labelField: 'countryname_de',
+      tooltipData: {
+        'co2_t_pc_2012': {
+          title: 'CO2-Ausstoß (t/Kopf)',
+          divisor: 1
+        },
+        'gdp_2014': {
+          title: 'BIP 2014 (in Mrd. US-Dollar)',
+          divisor: 1000000000
+        },
+        'population_2014': {
+          title: 'Bevölkerung 2014',
+          divisor: 1
+        },
+        'population_2050': {
+          title: 'Bevölkerung 2050 (Schätzung)',
+          divisor: 1
+        },
+        'important_industry_de': {
+          title: 'Wichtigster Wirtschaftszweig'
+        },
+        'climate_change_performance_index': {
+          title: 'Platz im Klimaschutz-Index'
+        }
+      }
+    });
+  </script>
 
 </body>
 </html>
