Change name of blockers

--- a/parisprotokoll/en.html
+++ b/parisprotokoll/en.html
@@ -17,7 +17,7 @@
 
     <div class="climate-factions__button-group">
       <button class="climate-factions__button climate-factions__button--a" data-action-focus="A">the influential</button>
-      <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">the blockaders</button>
+      <button class="climate-factions__button climate-factions__button--b" data-action-focus="B">the obstructors</button>
       <button class="climate-factions__button climate-factions__button--c" data-action-focus="C">the successful</button>
       <button class="climate-factions__button climate-factions__button--d" data-action-focus="D">the weak</button>
     </div>
